# Console-Bank-App

./: CMakeLists.txt  LICENCE.md  README.md
class/: Account.cpp  Account.h
functions/: functions.cpp  functions.h
instructions/: bankAppWorkingPrinciple.txt
main/: main.cpp
